# arxiv-notifier

./: .env.example  .gitignore  CLAUDE.md  README.md  project_overview_example.md  pyproject.toml
.github/workflows/: arxiv-notifier.yml
docs/: design.md
scripts/: migrate_database.py  run-once.sh
src/: __init__.py
src/arxiv_notifier/: __init__.py  arxiv_client.py  config.py  database.py  main.py  models.py  notion_client.py  processor.py  project_relevance.py  scheduler.py  slack_client.py  summarizer.py
tests/arxiv_notifier/: __init__.py  test_arxiv_client.py  test_config.py  test_models.py  test_notion_client.py
